feat: Refactor database schema to use custom schema for accounts, transactions, and users; update components to utilize new layout structure

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_schema: minibanking_schema
 
 # JWT Configuration
 jwt:
